@@ -1,5 +1,7 @@
 2010-10-25  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
+	* flickr/__init__.py, picasa.py: Added kludges for avoiding a json
+	  module 1.9 bug.
 	* fspot/__init__.py, sqldb.py: Dropped support for F-Spot 0.5.
 	* flickr/__init__.py, picasa.py: Dropped depends on simplejson.
 	  gphotoframe requires python 2.6.
